<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cross Platform</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="usernameHint">Username</string>
    <string name="loginText">Log in</string>
    <string name="passwordHint">Password</string>
    <string name="registerText">Register</string>
    <string name="icon_description">App Icon</string>
    <string name="resetPassText">Click here to reset your password</string>
    <string name="loginErrorText">Username or Password incorrect.\nPlease try again</string>
    <string name="title_activity_logged_in">Logged In</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="registerButtonText">Register Now</string>
    <string name="email">E-mail</string>
    <string name="name">Full Name</string>
    <string name="action_logout">Logout</string>
    <string name="action_add">Add</string>
    <string name="placeholder">Placeholder</string>
    <string name="placeholderNumber">00</string>
    <string name="title_activity_add_item">AddItemActivity</string>
    <string name="Item">Item to add</string>
    <string name="qty">Quantity</string>
    <string name="addBtn">Add Item</string>
    <string name="action_delete">Delete</string>
    <string name="Icon_description">Icon</string>
    <string name="emailToRecover">Recovery E-mail</string>
    <string name="recover">Recover</string>
    <string name="title_activity_edit">Edit</string>
    <string name="editSubmit">Save Changes</string>
    <string name="editItem">Item to Edit</string>

</resources>
