<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/backgroundColor"
    android:id="@+id/loginRoot">


    <ImageView
        android:id="@+id/loginIcon"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/ic_launcher"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/icon_description"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/usernameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:hint="@string/usernameHint"
        android:textColorHint="@color/graycolor"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:textColor="@color/blackColor"
        android:background="@drawable/custom_edittext"
        android:layout_marginTop="25dp" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:inputType="textPassword"
        android:hint="@string/passwordHint"
        android:textColorHint="@color/graycolor"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:textColor="@color/blackColor"
        android:background="@drawable/custom_edittext"
        android:layout_marginTop="15dp" />
    
    <TextView
        android:id="@+id/loginErrorText"
        android:textColor="@color/redColor"
        android:text="@string/loginErrorText"
        android:visibility="invisible"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="45dp" />

    <Button
        android:id="@+id/loginButton"
        android:text="@string/loginText"
        android:minHeight="60dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/whiteColor"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:background="@drawable/button_states"
        android:maxHeight="60dp" />


    <Button
        android:id="@+id/registerButton"
        android:text="@string/registerText"
        android:minHeight="60dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/whiteColor"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:background="@drawable/button_states"
        android:maxHeight="60dp"
        android:layout_marginTop="15dp" />

    <TextView
        android:id="@+id/resetPasswordBtn"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:text="@string/resetPassText"
        android:textColor="@color/blueColor"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:gravity="center"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="55dp" />

</LinearLayout>
