<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundColor"
    tools:context="com.mkdutton.crossplatformapp.EditActivity">

    <EditText
        android:id="@+id/editItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="25dp"
        android:background="@drawable/custom_edittext"
        android:hint="@string/editItem"
        android:inputType="textCapSentences"
        android:minHeight="48dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:textColor="@color/blackColor"
        android:textColorHint="@color/graycolor" />

    <EditText
        android:id="@+id/editAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="25dp"
        android:background="@drawable/custom_edittext"
        android:hint="@string/qty"
        android:inputType="number"
        android:minHeight="48dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:textColor="@color/blackColor"
        android:textColorHint="@color/graycolor" />

    <Button
        android:id="@+id/saveChangesButton"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_states"
        android:maxHeight="60dp"
        android:minHeight="60dp"
        android:text="@string/editSubmit"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/whiteColor" />

</LinearLayout>
